# board-test

./: CMakeLists.txt  README.md  project.config
src/: CMakeLists.txt  autostart.sh  board-test-beetle.sh  board-test-ci40.sh  board-test-marduk.sh  board_test_common.sh  common.sh  continuous-test-marduk.sh  log.h  test_6lowpan.sh  test_6lowpan_txrx.c  test_adc.sh  test_adc_rawcount.sh  test_audio.sh  test_bluetooth.sh  test_ethernet.sh  test_get_pin.sh  test_gpio_beetle.sh  test_heartbeat_led.sh  test_mic.sh  test_nand.sh  test_nor.sh  test_sdcard.sh  test_serial_loopback.c  test_set_pin.sh  test_spi_uart.sh  test_spi_uart_leds.sh  test_switch.c  test_toggle_pin.sh  test_toogle_pin.sh  test_tpm.sh  test_usb.sh  test_wifi.sh  version.in
src/click/: CMakeLists.txt  board_test_click_common.sh  click_common.sh  spi_common.c  spi_common.h  test_click_accel.sh  test_click_access_proximity.c  test_click_bargraph.sh  test_click_motion.sh  test_click_proximity.sh  test_click_read_accel.c  test_click_read_thermo3.c  test_click_thermo3.sh  test_click_thermo3_to_bargraph.sh  test_click_usb_uart.sh  test_click_wait_gpio.c  test_click_write_bargraph.c
